oasis-build/tests/ui/rpc_no_ctx.stderr
error: RPC method must take `&Context` as its second argument.
  --> $DIR/rpc_no_ctx.rs:11:28
   |
11 |     pub fn incr(&mut self, ctx: Context, amount: u32) -> Result<(), ()> {
   |                            ^^^^^^^^^^^^

error: aborting due to previous error

